[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI-DEMO/ItemSlotGUI.gd" type="Script" id=2]

[node name="ItemSlot" type="Panel"]
offset_right = 48.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 48, 48 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
mouse_filter = 2

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
offset_right = 38.0
offset_bottom = 38.0
expand = true
stretch_mode = 6

[node name="QuantityLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
align = 1
valign = 1
clip_text = true

[node name="EquippedLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "E"
align = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_ItemSlot_gui_input"]
